WP-1424: LinkFPP: Green links icon problem on safari -- FIXED.

--- a/css/style.css
+++ b/css/style.css
@@ -2080,6 +2080,7 @@ a.no-border:hover {
   padding-top: 4px;
 }
 .pane-bundle-links .green-bar .field-name-field-link-unlimited .field-item a {
+  padding-right: 10px;
   color: #7d8401;
 }
 .pane-bundle-links .green-bar .field-name-field-link-unlimited .field-item a[target=_blank]:after {
