--- a/sass/revamp-design/_design.sass
+++ b/sass/revamp-design/_design.sass
@@ -255,12 +255,14 @@ a.no-border
         border-top: 1px solid #e4e4e4
         padding-top: 4px
         a
+          padding-right: 10px
           color: $text-green
           &[target=_blank]
             &:after
               content: "\f100"
               font-family: "external-link"
               margin-left: 5px
+                            
           &:hover
             color: $text-blue
 
